# siml

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  examples.siml  prog.siml  wasm_prog.siml
src/: ast.rs  bi_types.rs  codegen.rs  eval.rs  expr.rs  grammar.lalrpop  lib.rs  main.rs  pipeline.rs  pretty.rs  repl.rs  term.rs  token.rs  types.rs  utils.rs  wasm.rs
tests/: test.rs  types_tests.rs
tests/failing/: bool_fails_in_wasm.siml  parser_failure.siml
tests/passing/: minimal_wasm.siml  recursive_lets_wasm.siml
