[package]
name = "siml"
version = "0.1.0"
authors = ["kRITZCREEK <christoph.hegemann1337@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.17.1"
regex = "1.1.9"
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
rustyline = "5.0.0"
notify = "4.0.12"
pretty = "0.5"
wasmi = "0.5"
wabt = "0.8"

[build-dependencies]
lalrpop = "0.17.1"

[dev-dependencies]
pretty_assertions = "0.6.1"

[lib]
name = "siml"
path = "src/lib.rs"

[[bin]]
name = "siml"
path = "src/main.rs"
